corrected scrollbar visibility for toolbars.

--- a/static/css/findreplace.styl
+++ b/static/css/findreplace.styl
@@ -1,2 +1,2 @@
-form
-  padding 0
+form#findAndReplace
+  overflow-y hidden
