--- a/static/css/panel.styl
+++ b/static/css/panel.styl
@@ -182,7 +182,7 @@ sideNavHeaderHeight = 55px
     margin-top sideNavHeaderHeight !important
     margin-bottom 70px
     overflow-x hidden
-    overflow-y scroll !important
+    overflow-y scroll
     padding 10px 10px 0 15px !important
     position relative !important
     display block !important
